[gd_scene load_steps=2 format=3 uid="uid://dbveehen5q2gi"]

[ext_resource type="Script" path="res://Scenes/ui/stats_tooltip_popup.gd" id="1_qdbrh"]

[node name="StatsTooltipPopup" type="Control"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qdbrh")

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.164706, 0, 0.294118, 0.972549)

[node name="StatsDescription" type="RichTextLabel" parent="."]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "STR: 50
MAG: 50
SPD: 50"
fit_content = true
scroll_active = false

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
